--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -4,6 +4,10 @@
     <head>
         <meta charset="utf-8" />
         <title>{{template "title" .}} - Snippetbox</title>
+        <!-- Link to the CSS stylesheet and favicon -->
+        <link rel='stylesheet' href='/static/css/main.css'>
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
     </head>
     <body>
         <header>
@@ -17,6 +21,8 @@
         </section>
         <!-- Invoke the footer template -->
         {{template "footer" .}}
+        <!-- And include the JavaScript file -->
+        <script src="/static/js/main.js" type="text/javascript"></script>
     </body>
 </html>
 {{ end }}
